# Secondbrain

./: README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: crypto.rs  database.rs  main.rs
src/lib/: Editor.svelte  GraphCanvas.svelte  RelationshipManager.svelte
src/routes/: +page.svelte
