[package]
name = "secondbrian"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.4", features = ["v4", "serde"] }
aes-gcm = "0.10.2"
secrecy = "0.8.0"
rand = "0.8.5"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"

